deployments/canary-ingress-nginx/main-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: django
    app.kubernetes.io/instance: main
    app.kubernetes.io/version: "0.9.1"
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: django-k8s-demo
    app.kubernetes.io/managed-by: kubectl
  name: django-main
  namespace: canary-ingress-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: django
      app.kubernetes.io/instance: main
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django
        app.kubernetes.io/instance: main
    spec:
      containers:
        - image: ghcr.io/pasiol/django-k8s-demo-web@sha256:2ab50e7849e5139cc6205458fea26e0818ff162c77ae4ff8b589725b0477439a
          name: django-k8s-demo-web
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "40Mi"
              cpu: "20m"
            limits:
              cpu: "80m"
              memory: "80Mi"
          ports:
            - containerPort: 8000
