deployments/canary-ingress-nginx/toolbox.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: canary-ingress-nginx
  labels:
    app.kubernetes.io/name: almalinux
    app.kubernetes.io/instance: base
    app.kubernetes.io/version: "9"
    app.kubernetes.io/component: debug-container
    app.kubernetes.io/part-of: django-k8s-demo
    app.kubernetes.io/managed-by: kubectl
spec:
  containers:
    - image: quay.io/almalinuxorg/9-base:latest
      command:
        - sleep
        - "43200"
      imagePullPolicy: IfNotPresent
      name: toolbox
      resources:
        requests:
          memory: "100Mi"
          cpu: "50m"
        limits:
          memory: "200Mi"
  restartPolicy: Always
