deployments/canary-ingress-nginx/canary-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
  namespace: canary-ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "dk8sdemo.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: canary
            port:
              number: 80
